FInalisation du code telephone et ajout de fichier manquant.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <nav class="nav">
         <a class="nav__logo" href="#">Logo Placeholder</a>
-        <a class="nav__link" href="#">Sign up</a>
+        <a class="nav__link btn" href="#">Sign up</a>
     </nav>
     <header class="header">
         <h1 class="header__title">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
         <form class="form" action="#">
             <input class="form__input" type="email" placeholder="Email adress">
-            <button class="form__btn" type="submit">Submit</button>
+            <button class="form__btn btn" type="submit">Submit</button>
         </form>
     </header>
     <main>
@@ -26,25 +26,28 @@
             <article class="article">
                 <img class="article__img" src="./img/puzzle-piece-solid.svg" alt="icone puzzle">
                 <h3 class="article__title">Lorem, ipsum.</h3>
-                <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non repudiandae eligendi debitis
+                <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non repudiandae
+                    eligendi debitis
                     quidem
                     temporibus. Obcaecati maxime nisi saepe voluptatum nulla, aperiam quas dicta minima natus, ad quae
                     optio
                     porro?</p>
             </article>
             <article class="article">
-                <img src="./img/puzzle-piece-solid.svg" alt="icone puzzle">
+                <img class="article__img" src="./img/puzzle-piece-solid.svg" alt="icone puzzle">
                 <h3 class="article__title">Lorem, ipsum.</h3>
-                <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non repudiandae eligendi debitis
+                <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non repudiandae
+                    eligendi debitis
                     quidem
                     temporibus. Obcaecati maxime nisi saepe voluptatum nulla, aperiam quas dicta minima natus, ad quae
                     optio
                     porro?</p>
             </article>
             <article class="article">
-                <img src="./img/puzzle-piece-solid.svg" alt="icone puzzle">
+                <img class="article__img" src="./img/puzzle-piece-solid.svg" alt="icone puzzle">
                 <h3 class="article__title">Lorem, ipsum.</h3>
-                <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non repudiandae eligendi debitis
+                <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non repudiandae
+                    eligendi debitis
                     quidem
                     temporibus. Obcaecati maxime nisi saepe voluptatum nulla, aperiam quas dicta minima natus, ad quae
                     optio
@@ -54,22 +57,23 @@
         <hr class="separator">
         <section class="section__contact">
             <h2 class="contact__title">Contact Us</h2>
-            <form class="form" action="#">
-                <input class="form__input" type="text" placeholder="Firstname">
-                <input class="form__input" type="text" placeholder="Lastname">
-                <input class="form__input" type="text" placeholder="Email address">
-                <input class="form__input" type="text" placeholder="Phone number">
-                <textarea class="form__textarea" name="comment" id="textarea" cols="30" rows="5" placeholder="Type your message"></textarea>
-                <button class="form__btn" type="submit">Submit</button>
+            <form class="form contact__form" action="#">
+                <input class="form__input contact__form__input" type="text" placeholder="Firstname">
+                <input class="form__input contact__form__input" type="text" placeholder="Lastname">
+                <input class="form__input contact__form__input" type="text" placeholder="Email address">
+                <input class="form__input contact__form__input" type="text" placeholder="Phone number">
+                <textarea class="form__textarea contact__form__textarea" name="comment" id="textarea" cols="30" rows="5"
+                    placeholder="Type your message"></textarea>
+                <button class="form__btn btn contact__form__btn" type="submit">Submit</button>
             </form>
         </section>
     </main>
     <footer class="footer">
-        <ul class="footer_list">
+        <ul class="footer__list">
             <li><a href="#">About</a> - </li>
             <li><a href="#">Contact</a> - </li>
             <li><a href="#">Terms of Use</a> - </li>
-            <li><a href="#">Privacy Policy </a> - </li>
+            <li><a href="#">Privacy Policy </a></li>
         </ul>
         <p class="footer__text">My website 2022 - All right reserved</p>
     </footer>
