Modification du footer.

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     </main>
     <footer class="footer">
         <ul class="footer__list">
-            <li><a href="#">About</a> - </li>
-            <li><a href="#">Contact</a> - </li>
-            <li><a href="#">Terms of Use</a> - </li>
+            <li><a href="#">About - </a></li>
+            <li><a href="#">Contact - </a></li>
+            <li><a href="#">Terms of Use - </a></li>
             <li><a href="#">Privacy Policy </a></li>
         </ul>
         <p class="footer__text">My website 2022 - All right reserved</p>
