--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Maquette</title>
-</head>
-
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
+        <title>Maquette</title>
+    </head>
+    
+    <body>
+    <div class="modal__container" id="modal">
+        <div class="modal">
+            <p class="modal__text">Votre demande a été envoyé !</p>
+            <button class="modal__btn" type="button" id="modalBtn">OK</button>
+        </div>
+    </div>
     <nav class="nav">
         <a class="nav__logo" href="#">Logo Placeholder</a>
         <a class="nav__link" href="#">Sign up</a>
